--- a/task/student_manage_.ipynb
+++ b/task/student_manage_.ipynb
@@ -46,46 +46,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "bcd97161-23dd-455f-9f3b-a2513b082a87",
-   "metadata": {
-    "id": "258ffff1-519f-42d4-b20b-6757233ea055"
-   },
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "\n",
-    "def load_info1():\n",
-    "    try:\n",
-    "        with open(\"./db.txt\", \"rt\", encoding=\"utf8\") as f:\n",
-    "            line = f.readlines()          \n",
-    "            for i in line:\n",
-    "                s=re.sub('\\n',\"\",i)\n",
-    "                stu_info.append(s.split(','))\n",
-    "    except FileNotFoundError:\n",
-    "        print(\"학생정보 파일이 없습니다!!!\")\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "73c6eec2-3fdf-46c0-9bff-1db1d1a3202c",
-   "metadata": {
-    "id": "73c6eec2-3fdf-46c0-9bff-1db1d1a3202c"
-   },
-   "outputs": [],
-   "source": [
-    "def save_info():\n",
-    "    with open(\"./test.txt\", \"wt\") as f:\n",
-    "        for i in range(len(stu_info)):\n",
-    "            data =','.join(stu_info[i])+'\\n'\n",
-    "            f.write(data)\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "id": "7afebd2d-0730-4410-b10b-525084bac634",
    "metadata": {
@@ -187,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "7b4ff51e-464e-4fbe-ac92-99599bc1a2e9",
    "metadata": {
     "id": "d67472f1-328d-4237-81b6-0459663051aa",
@@ -198,6 +158,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "****************************************\n",
+      "2명의 학생정보가 있습니다\n",
+      "****************************************\n",
+      "1. 학생정보 입력\n",
+      "2. 학생정보 검색\n",
+      "3. 학생정보 출력\n",
+      "4. 학생정보 파일\n",
+      "5. 종료\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "메뉴선택: 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', 'ww']\n",
+      "['2', 'rr']\n",
       "****************************************\n",
       "2명의 학생정보가 있습니다\n",
       "****************************************\n",
@@ -226,8 +209,8 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "번호를 선택하세요 1\n",
-      "학생번호를 입력하세요 1\n"
+      "번호를 선택하세요 2\n",
+      "학생이름을 입력하세요 ww\n"
      ]
     },
     {
@@ -242,71 +225,6 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "번호를 선택하세요 4\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "****************************************\n",
-      "2명의 학생정보가 있습니다\n",
-      "****************************************\n",
-      "1. 학생정보 입력\n",
-      "2. 학생정보 검색\n",
-      "3. 학생정보 출력\n",
-      "4. 학생정보 파일\n",
-      "5. 종료\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "메뉴선택: 4\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. 파일작업 선택(1. 저장, 2. 불러오기, 3. 이전\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "번호를 선택하세요 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "db.txt 불러오기를 하였습니다.\n",
-      "1. 파일작업 선택(1. 저장, 2. 불러오기, 3. 이전\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "번호를 선택하세요 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "db.txt 불러오기를 하였습니다.\n",
-      "1. 파일작업 선택(1. 저장, 2. 불러오기, 3. 이전\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
       "번호를 선택하세요 3\n"
      ]
     },
@@ -315,34 +233,7 @@
      "output_type": "stream",
      "text": [
       "****************************************\n",
-      "6명의 학생정보가 있습니다\n",
-      "****************************************\n",
-      "1. 학생정보 입력\n",
-      "2. 학생정보 검색\n",
-      "3. 학생정보 출력\n",
-      "4. 학생정보 파일\n",
-      "5. 종료\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "메뉴선택: 3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1', 'ww']\n",
-      "['2', 'rr']\n",
-      "['1', 'ww']\n",
-      "['2', 'rr']\n",
-      "['1', 'ww']\n",
-      "['2', 'rr']\n",
-      "****************************************\n",
-      "6명의 학생정보가 있습니다\n",
+      "2명의 학생정보가 있습니다\n",
       "****************************************\n",
       "1. 학생정보 입력\n",
       "2. 학생정보 검색\n",
@@ -373,7 +264,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " ee\n"
+      " rr\n"
      ]
     },
     {
@@ -381,7 +272,7 @@
      "output_type": "stream",
      "text": [
       "****************************************\n",
-      "7명의 학생정보가 있습니다\n",
+      "3명의 학생정보가 있습니다\n",
       "****************************************\n",
       "1. 학생정보 입력\n",
       "2. 학생정보 검색\n",
@@ -394,32 +285,29 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "메뉴선택: 2\n"
+      "메뉴선택: 4\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. 검색선택(1. 번호, 2. 이름, 3. 이전\n"
+      "1. 파일작업 선택(1. 저장, 2. 불러오기, 3. 이전\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "번호를 선택하세요 1\n",
-      "학생번호를 입력하세요 1\n"
+      "번호를 선택하세요 1\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', 'ww']\n",
-      "['1', 'ww']\n",
-      "['1', 'ww']\n",
-      "1. 검색선택(1. 번호, 2. 이름, 3. 이전\n"
+      "db.txt 파일로 저장하였습니다.\n",
+      "1. 파일작업 선택(1. 저장, 2. 불러오기, 3. 이전\n"
      ]
     },
     {
@@ -434,7 +322,7 @@
      "output_type": "stream",
      "text": [
       "****************************************\n",
-      "7명의 학생정보가 있습니다\n",
+      "3명의 학생정보가 있습니다\n",
       "****************************************\n",
       "1. 학생정보 입력\n",
       "2. 학생정보 검색\n",
