--- a/task/백경희_영화랭킹.ipynb
+++ b/task/백경희_영화랭킹.ipynb
@@ -15,34 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "a10d7ae5-02ed-4f3f-bcad-058c955b21b1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data/movie_rank.csv파일이 저장되었습니다.\n"
-     ]
-    }
-   ],
-   "source": [
-    "if __name__ == '__main__':\n",
-    "    \n",
-    "    crawling('20221117', 5)\n",
-    "    \n",
-    "    to_csv(\"data/movie_rank.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "id": "3657d771-2aeb-470c-b62b-9c61b96c4099",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crawling(start:str, due:int):\n",
+    "def crawling(start:str, due:int, d_data:dict):\n",
     "    import requests\n",
     "    from bs4 import BeautifulSoup\n",
     "    \n",
@@ -51,7 +29,6 @@
     "    for i in range(due):\n",
     "        dates.append(str(int(start)+i))\n",
     "    \n",
-    "    m_rank={}\n",
     "    for d in dates:\n",
     "        m_name =[]\n",
     "        response = requests.get(s+d)\n",
@@ -61,17 +38,18 @@
     "        for tag in tags:\n",
     "            m_name.append(tag.text.strip())\n",
     "        \n",
-    "        m_rank[d]=m_name  "
+    "        d_data[d]=m_name  \n",
+    "    return d_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 7,
    "id": "b34e502e-2ef3-45c9-a930-79ef0051d920",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_csv(filename:str):\n",
+    "def to_csv(filename:str, d_data:dict):\n",
     "    import csv\n",
     "    with open(filename,'w',newline='',encoding='utf-8') as csvfile:\n",
     "        s_writer = csv.writer(csvfile)\n",
@@ -82,6 +60,40 @@
     "            s_writer.writerow(i)\n",
     "    print(filename+\"파일이 저장되었습니다.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "965da0bc-77c4-4f75-9844-e21d3d235c79",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "crawling() takes 2 positional arguments but 3 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [8], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m      2\u001b[0m     m_rank_dict \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m----> 3\u001b[0m     \u001b[43mcrawling\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m20221117\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mm_rank_dict\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m     to_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/movie_rank.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, m_rank_dict)\n",
+      "\u001b[1;31mTypeError\u001b[0m: crawling() takes 2 positional arguments but 3 were given"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    m_rank_dict = {}\n",
+    "    m_rank_dict = crawling('20221117', 5, m_rank_dict)\n",
+    "    \n",
+    "    to_csv(\"data/movie_rank.csv\", m_rank_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "013603e5-4ff3-40a4-9115-8e35405154a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
