--- a/task/백경희_영화랭킹.ipynb
+++ b/task/백경희_영화랭킹.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3657d771-2aeb-470c-b62b-9c61b96c4099",
    "metadata": {
     "id": "3657d771-2aeb-470c-b62b-9c61b96c4099"
@@ -24,26 +24,24 @@
     "    from bs4 import BeautifulSoup\n",
     "    \n",
     "    s = 'https://movie.naver.com/movie/sdb/rank/rmovie.naver?sel=cnt&tg=0&date='\n",
-    "    dates = []\n",
-    "    for i in range(due):\n",
-    "        dates.append(str(int(start)+i))\n",
     "    \n",
-    "    for d in dates:\n",
+    "    for d in range(due):\n",
     "        m_name =[]\n",
-    "        response = requests.get(s+d)\n",
+    "        day_d = str(int(start)+d)\n",
+    "        response = requests.get(s+day_d)\n",
     "        soup = BeautifulSoup(response.text)\n",
     "        tags = soup.select('div[class=tit3]')\n",
     "    \n",
     "        for tag in tags:\n",
     "            m_name.append(tag.text.strip())\n",
     "        \n",
-    "        d_data[d]=m_name  \n",
+    "        d_data[day_d]=m_name  \n",
     "    return d_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b34e502e-2ef3-45c9-a930-79ef0051d920",
    "metadata": {
     "id": "b34e502e-2ef3-45c9-a930-79ef0051d920"
@@ -64,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "965da0bc-77c4-4f75-9844-e21d3d235c79",
    "metadata": {
     "id": "965da0bc-77c4-4f75-9844-e21d3d235c79",
